--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "asg_aws",
   "version": "1.0.0",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "dev": "npx tsc -b && node ./dist/index.js"
   },
@@ -13,6 +14,7 @@
     "typescript": "^5.9.3"
   },
   "dependencies": {
+    "@types/express": "^5.0.3",
     "express": "^5.1.0"
   }
 }
